--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="stil.css">
         <link rel="icon" href="Bici.jpg" type="image/jpg">
+        <style>
+            body{
+                overflow-x: hidden;
+            }
+             li a{
+                background-color: rgb(250, 200, 162);
+            }
+        </style>
     </head>
     <body>
+        <div style="width: 100%;height:100%;padding:20px;">
          <nav>
             <li><a href="index.html">Avizier</a></li>
             <li><a href="carte.html">Carte</a></li>
@@ -22,11 +31,12 @@
         <a href="s.html"><img class="v"  style="float:left;width:400px;" src="Fundal1.png" alt="Fundal"/></a> 
         <a href="s1.html"><img class="v" style="float:right;width:400px;" src="Fundal2.png" alt="Fundal"/></a>    <div id="t">
         <h1>Notiția</h1>
-        <a href="carte.html"><img id="C" src="Bici.png" alt="Notiția"/></a>
+        <a href="contact.html"><img id="C" src="Bici.png" alt="Notiția"/></a>
         <h2 style="text-align:center;">Un loc pentru pasionații de lecură</h2>
         </div>
         <a href="s2.html"><img class="v" style="float:left;width:400px;margin-top:-290px;" src="Fundal3.png" alt="Fundal"/></a>
         <a href="s3.html"><img class="v" style="float:right;width:400px;margin-top:-390px;" src="Fundal4.png" alt="Fundal"/></a>
         <script src="script.js" async defer></script>
+        </div>
     </body>
 </html>
