--- a/carte.html
+++ b/carte.html
@@ -8,8 +8,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="stil1.css">
         <link rel="icon" id="1" href="1.jpg">
+        <style>
+            a{
+                
+    color: #99dfec;
+    background-color: #003da4;
+            }
+            body{
+                overflow-x: hidden;
+            }
+        </style>
     </head>
     <body>
+        <div style="background-image: url('q.png');background-size: cover ; background-repeat: no-repeat ;width: 98%;height:98%;padding:20px;">
         <nav>
             <li><a href="index.html">Avizier</a></li>
             <li><a href="carte.html">Carte</a></li>
@@ -31,5 +42,6 @@
         <footer id="yay">
             <span>&copy; Marincas Rares, Toate drepturile rezervate!</span>
         </footer>
+                    </div>
     </body>
 </html>
